--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
   scroll-behavior: smooth;
   scroll-snap-type: y proximity;
@@ -6,8 +7,10 @@ html, body {
 
 body {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
-  background: linear-gradient(to bottom, #4b0015, #12000a);
+  font-family: "Poppins", sans-serif;
+  background: #12000a;
+  /* background: linear-gradient(to bottom, #4b0015, #12000a); */
+  height: 100vh;
   color: #fff;
   text-align: center;
   overflow-x: hidden;
@@ -28,7 +31,6 @@ section {
   scroll-snap-align: center;
 }
 
-
 .hero h1 {
   font-size: clamp(2.8rem, 7vw, 4.5rem);
   color: #ffccd5;
@@ -38,7 +40,7 @@ section {
   position: fixed;
   top: 15px;
   right: 15px;
-  background: rgba(255,255,255,0.15);
+  background: rgba(255, 255, 255, 0.15);
   color: #fff;
   border: none;
   padding: 10px 14px;
@@ -70,7 +72,6 @@ section {
   }
 }
 
-
 @keyframes float {
   to {
     transform: translateY(-120vh);
@@ -84,8 +85,10 @@ section {
 }
 .gallery-grid {
   display: grid;
-  grid-template-columns: 1fr;
-  gap: 20px;
+  /* grid-template-columns: 1fr; */
+  grid-template-columns: repeat(3, 1fr);
+
+  /* gap: 20px; */
   max-width: 380px;
   margin: auto;
 }
@@ -94,9 +97,9 @@ section {
   width: 100%;
   height: auto;
   display: block;
-  border-radius: 20px;
+  /* border-radius: 20px; */
   object-fit: cover;
-  box-shadow: 0 20px 40px rgba(0,0,0,0.5);
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
 }
 
 /* Tablet & up */
@@ -108,7 +111,7 @@ section {
 }
 
 .promise .card {
-  background: rgba(255,255,255,0.1);
+  background: rgba(255, 255, 255, 0.1);
   padding: 40px;
   border-radius: 25px;
   max-width: 600px;
@@ -120,7 +123,7 @@ section {
   opacity: 0.8;
 }
 .memory-card {
-  background: rgba(255,255,255,0.12);
+  background: rgba(255, 255, 255, 0.12);
   padding: 40px;
   border-radius: 25px;
   max-width: 300px;
